--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
       <version>${jackson.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-hibernate5 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-hibernate5</artifactId>
+      <version>2.7.9</version>
+    </dependency>
+
+
     <!-- Database -->
     <dependency>
       <groupId>org.springframework.data</groupId>
